--- a/modeling_francois.ipynb
+++ b/modeling_francois.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Transfer Learning with GPT-2 [Modeling]\n",
     "### Data Mining Final Project\n",
-    "(Working through tutorials) - https://towardsdatascience.com/how-to-fine-tune-gpt-2-for-text-generation-ae2ea53bc272\n",
+    "(Working through tutorials) - https://towardsdatascience.com/how-to-fine-tune-gpt-2-for-text-generation-ae2ea53bc272<br>\n",
+    "\n",
     "Khyatee Desai<br>\n",
     "kdesai1@gradcenter.cuny.edu<br>\n",
     "December 2022"
@@ -916,6 +917,222 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>SName</th>\n",
+       "      <th>Lyric</th>\n",
+       "      <th>Artist</th>\n",
+       "      <th>Genres</th>\n",
+       "      <th>True_end_lyrics</th>\n",
+       "      <th>Generated_lyrics</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1349</td>\n",
+       "      <td>One With You</td>\n",
+       "      <td>Angel I want to</td>\n",
+       "      <td>Santana</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>be one with you Spread your wings and let me i...</td>\n",
+       "      <td>hear what you think about this article. Submi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1978</td>\n",
+       "      <td>Made a Mess of Me</td>\n",
+       "      <td>Yeah I felt so free Life's a breeze I didn't s...</td>\n",
+       "      <td>Stereophonics</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>Yeah You turned me over You stitched me up And...</td>\n",
+       "      <td>In California Was bittersweet And in the morn...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>799</td>\n",
+       "      <td>Say Sons</td>\n",
+       "      <td>Well, I got a little girl down by the river No...</td>\n",
+       "      <td>Bruce Springsteen</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>on, down by the river oh, come on, girl, it's ...</td>\n",
+       "      <td>Well, I got a little girl down by the river No...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>774</td>\n",
+       "      <td>Ramrod</td>\n",
+       "      <td>Hey, little dolly with the blue jeans on I wan...</td>\n",
+       "      <td>Bruce Springsteen</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>little girl I'll put my foot to the floor Give...</td>\n",
+       "      <td>down here in a few days I'll be there tonight...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1743</td>\n",
+       "      <td>Fault Lines</td>\n",
+       "      <td>See those fault lines Laid out like land mines...</td>\n",
+       "      <td>Tom Petty</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>of my own I've got a few of my own fault lines...</td>\n",
+       "      <td>of my own I've got a few of my own fault line...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>1840</td>\n",
+       "      <td>The Golden Rose</td>\n",
+       "      <td>Well, The Golden Rose sailed with a broken man...</td>\n",
+       "      <td>Tom Petty</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>Many a-night I would think of her All alone Ch...</td>\n",
+       "      <td>I was gone\\n\\n\\nNow I've told you stories and...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>1150</td>\n",
+       "      <td>I Believe To My Soul</td>\n",
+       "      <td>One of these days and it won't be long Youre g...</td>\n",
+       "      <td>The Animals</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>Oh yes, I believe I believe to my soul You're ...</td>\n",
+       "      <td>I believe to my soul you're tryin' to beat me...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>1114</td>\n",
+       "      <td>Many Rivers To Cross</td>\n",
+       "      <td>Eric Burdon &amp; Animals - Many Rivers To Cross M...</td>\n",
+       "      <td>The Animals</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>say why Well I guess, I have to try, yeah yeah...</td>\n",
+       "      <td>say why Well I guess, I have to try Many rive...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>134</td>\n",
+       "      <td>Even A Fool Learns To Love</td>\n",
+       "      <td>There was a time, the laughing time I took my ...</td>\n",
+       "      <td>David Bowie</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>On a clown and an angel so much in love I'll s...</td>\n",
+       "      <td>On a clown and an angel so much in love I'll ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>555</td>\n",
+       "      <td>Dedication</td>\n",
+       "      <td>Well way back in the Bible time A cat named No...</td>\n",
+       "      <td>Bruce Springsteen</td>\n",
+       "      <td>Rock</td>\n",
+       "      <td>through and through Dedication like I give to ...</td>\n",
+       "      <td>to the pope I'm done now I'm done now I'm don...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>200 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     index                       SName  \\\n",
+       "0     1349                One With You   \n",
+       "1     1978           Made a Mess of Me   \n",
+       "2      799                    Say Sons   \n",
+       "3      774                      Ramrod   \n",
+       "4     1743                 Fault Lines   \n",
+       "..     ...                         ...   \n",
+       "195   1840             The Golden Rose   \n",
+       "196   1150        I Believe To My Soul   \n",
+       "197   1114        Many Rivers To Cross   \n",
+       "198    134  Even A Fool Learns To Love   \n",
+       "199    555                  Dedication   \n",
+       "\n",
+       "                                                 Lyric             Artist  \\\n",
+       "0                                      Angel I want to            Santana   \n",
+       "1    Yeah I felt so free Life's a breeze I didn't s...      Stereophonics   \n",
+       "2    Well, I got a little girl down by the river No...  Bruce Springsteen   \n",
+       "3    Hey, little dolly with the blue jeans on I wan...  Bruce Springsteen   \n",
+       "4    See those fault lines Laid out like land mines...          Tom Petty   \n",
+       "..                                                 ...                ...   \n",
+       "195  Well, The Golden Rose sailed with a broken man...          Tom Petty   \n",
+       "196  One of these days and it won't be long Youre g...        The Animals   \n",
+       "197  Eric Burdon & Animals - Many Rivers To Cross M...        The Animals   \n",
+       "198  There was a time, the laughing time I took my ...        David Bowie   \n",
+       "199  Well way back in the Bible time A cat named No...  Bruce Springsteen   \n",
+       "\n",
+       "    Genres                                    True_end_lyrics  \\\n",
+       "0     Rock  be one with you Spread your wings and let me i...   \n",
+       "1     Rock  Yeah You turned me over You stitched me up And...   \n",
+       "2     Rock  on, down by the river oh, come on, girl, it's ...   \n",
+       "3     Rock  little girl I'll put my foot to the floor Give...   \n",
+       "4     Rock  of my own I've got a few of my own fault lines...   \n",
+       "..     ...                                                ...   \n",
+       "195   Rock  Many a-night I would think of her All alone Ch...   \n",
+       "196   Rock  Oh yes, I believe I believe to my soul You're ...   \n",
+       "197   Rock  say why Well I guess, I have to try, yeah yeah...   \n",
+       "198   Rock  On a clown and an angel so much in love I'll s...   \n",
+       "199   Rock  through and through Dedication like I give to ...   \n",
+       "\n",
+       "                                      Generated_lyrics  \n",
+       "0     hear what you think about this article. Submi...  \n",
+       "1     In California Was bittersweet And in the morn...  \n",
+       "2    Well, I got a little girl down by the river No...  \n",
+       "3     down here in a few days I'll be there tonight...  \n",
+       "4     of my own I've got a few of my own fault line...  \n",
+       "..                                                 ...  \n",
+       "195   I was gone\\n\\n\\nNow I've told you stories and...  \n",
+       "196   I believe to my soul you're tryin' to beat me...  \n",
+       "197   say why Well I guess, I have to try Many rive...  \n",
+       "198   On a clown and an angel so much in love I'll ...  \n",
+       "199   to the pope I'm done now I'm done now I'm don...  \n",
+       "\n",
+       "[200 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_set"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -943,7 +1160,6 @@
   }
  ],
  "metadata": {
-  "instance_type": "ml.g4dn.xlarge",
   "kernelspec": {
    "display_name": "Python 3 (Data Science)",
    "language": "python",
