added naive model

--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,6 @@
     "import numpy as np\n",
     "import re\n",
     "import torch\n",
-    "\n",
     "from transformers import TextDataset, DataCollatorForLanguageModeling\n",
     "from transformers import Trainer, TrainingArguments\n",
     "from transformers import PreTrainedTokenizerFast, GPT2LMHeadModel, GPT2TokenizerFast, GPT2Tokenizer\n"
@@ -28,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,18 +42,20 @@
     "\n",
     "def load_data_collator(tokenizer, mlm = False):\n",
     "    data_collator = DataCollatorForLanguageModeling(\n",
-    "        tokenizer=tokenizer, \n",
-    "        mlm=mlm,\n",
+    "        tokenizer = tokenizer, \n",
+    "        mlm = mlm,\n",
     "    )\n",
     "    return data_collator\n",
     "\n",
     "\n",
-    "def train(train_file_path,model_name,\n",
+    "def train(train_file_path,\n",
+    "          model_name,\n",
     "          output_dir,\n",
     "          overwrite_output_dir,\n",
     "          per_device_train_batch_size,\n",
     "          num_train_epochs,\n",
     "          save_steps):\n",
+    "    \n",
     "    tokenizer = GPT2Tokenizer.from_pretrained(model_name)\n",
     "    train_dataset = load_dataset(train_file_path, tokenizer)\n",
     "    data_collator = load_data_collator(tokenizer)\n",
@@ -65,17 +66,17 @@
     "\n",
     "    model.save_pretrained(output_dir)\n",
     "    training_args = TrainingArguments(\n",
-    "          output_dir=output_dir,\n",
-    "          overwrite_output_dir=overwrite_output_dir,\n",
-    "          per_device_train_batch_size=per_device_train_batch_size,\n",
-    "          num_train_epochs=num_train_epochs,\n",
+    "          output_dir = output_dir,\n",
+    "          overwrite_output_dir = overwrite_output_dir,\n",
+    "          per_device_train_batch_size = per_device_train_batch_size,\n",
+    "          num_train_epochs=num_train_epochs\n",
     "      )\n",
     "\n",
     "    trainer = Trainer(\n",
-    "          model=model,\n",
-    "          args=training_args,\n",
-    "          data_collator=data_collator,\n",
-    "          train_dataset=train_dataset,\n",
+    "          model = model,\n",
+    "          args = training_args,\n",
+    "          data_collator = data_collator,\n",
+    "          train_dataset = train_dataset,\n",
     "  )\n",
     "      \n",
     "    trainer.train()\n",
@@ -84,43 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_parquet('beatles_lyrics.parquet').drop_duplicates('lyrics')\n",
-    "df.drop(df[df['lyrics'].str.contains('Speech')].index, inplace=True)\n",
-    "test_set = df.sample(35)\n",
-    "train_set = df.drop(test_set.index)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "238706"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# test_set.to_parquet('testing_lyrics.parquet')\n",
-    "# train_set.to_parquet('training_lyrics.parquet')\n",
-    "# f = open('training_lyrics.txt', 'w')\n",
-    "# train_string = ' '.join(list(train_set.lyrics.values))\n",
-    "# f.write(train_string)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,122 +102,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/transformers/data/datasets/language_modeling.py:58: FutureWarning: This dataset will be removed from the library soon, preprocessing should be handled with the 🤗 Datasets library. You can have a look at this example script for pointers: https://github.com/huggingface/transformers/blob/main/examples/pytorch/language-modeling/run_mlm.py\n",
-      "  FutureWarning,\n",
-      "/opt/conda/lib/python3.7/site-packages/transformers/optimization.py:310: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
-      "  FutureWarning,\n",
-      "***** Running training *****\n",
-      "  Num examples = 881\n",
-      "  Num Epochs = 20\n",
-      "  Instantaneous batch size per device = 8\n",
-      "  Total train batch size (w. parallel, distributed & accumulation) = 8\n",
-      "  Gradient Accumulation steps = 1\n",
-      "  Total optimization steps = 2220\n",
-      "  Number of trainable parameters = 354823168\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='2220' max='2220' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [2220/2220 28:20, Epoch 20/20]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Step</th>\n",
-       "      <th>Training Loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>500</td>\n",
-       "      <td>1.914500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1000</td>\n",
-       "      <td>0.627300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1500</td>\n",
-       "      <td>0.245600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2000</td>\n",
-       "      <td>0.144600</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Saving model checkpoint to results/checkpoint-500\n",
-      "Configuration saved in results/checkpoint-500/config.json\n",
-      "Model weights saved in results/checkpoint-500/pytorch_model.bin\n",
-      "Saving model checkpoint to results/checkpoint-1000\n",
-      "Configuration saved in results/checkpoint-1000/config.json\n",
-      "Model weights saved in results/checkpoint-1000/pytorch_model.bin\n",
-      "Saving model checkpoint to results/checkpoint-1500\n",
-      "Configuration saved in results/checkpoint-1500/config.json\n",
-      "Model weights saved in results/checkpoint-1500/pytorch_model.bin\n",
-      "Saving model checkpoint to results/checkpoint-2000\n",
-      "Configuration saved in results/checkpoint-2000/config.json\n",
-      "Model weights saved in results/checkpoint-2000/pytorch_model.bin\n",
-      "\n",
-      "\n",
-      "Training completed. Do not forget to share your model on huggingface.co/models =)\n",
-      "\n",
-      "\n",
-      "Saving model checkpoint to results\n",
-      "Configuration saved in results/config.json\n",
-      "Model weights saved in results/pytorch_model.bin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train(\n",
-    "    train_file_path=train_file_path,\n",
-    "    model_name=model_name,\n",
-    "    output_dir=output_dir,\n",
-    "    overwrite_output_dir=overwrite_output_dir,\n",
-    "    per_device_train_batch_size=per_device_train_batch_size,\n",
-    "    num_train_epochs=num_train_epochs,\n",
-    "    save_steps=save_steps\n",
+    "    train_file_path= train_file_path,\n",
+    "    model_name= model_name,\n",
+    "    output_dir= output_dir,\n",
+    "    overwrite_output_dir= overwrite_output_dir,\n",
+    "    per_device_train_batch_size= per_device_train_batch_size,\n",
+    "    num_train_epochs= num_train_epochs,\n",
+    "    save_steps= save_steps\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TrainingArguments(\n",
+       "_n_gpu=1,\n",
+       "adafactor=False,\n",
+       "adam_beta1=0.9,\n",
+       "adam_beta2=0.999,\n",
+       "adam_epsilon=1e-08,\n",
+       "auto_find_batch_size=False,\n",
+       "bf16=False,\n",
+       "bf16_full_eval=False,\n",
+       "data_seed=None,\n",
+       "dataloader_drop_last=False,\n",
+       "dataloader_num_workers=0,\n",
+       "dataloader_pin_memory=True,\n",
+       "ddp_bucket_cap_mb=None,\n",
+       "ddp_find_unused_parameters=None,\n",
+       "ddp_timeout=1800,\n",
+       "debug=[],\n",
+       "deepspeed=None,\n",
+       "disable_tqdm=False,\n",
+       "do_eval=False,\n",
+       "do_predict=False,\n",
+       "do_train=False,\n",
+       "eval_accumulation_steps=None,\n",
+       "eval_delay=0,\n",
+       "eval_steps=None,\n",
+       "evaluation_strategy=no,\n",
+       "fp16=False,\n",
+       "fp16_backend=auto,\n",
+       "fp16_full_eval=False,\n",
+       "fp16_opt_level=O1,\n",
+       "fsdp=[],\n",
+       "fsdp_min_num_params=0,\n",
+       "fsdp_transformer_layer_cls_to_wrap=None,\n",
+       "full_determinism=False,\n",
+       "gradient_accumulation_steps=1,\n",
+       "gradient_checkpointing=False,\n",
+       "greater_is_better=None,\n",
+       "group_by_length=False,\n",
+       "half_precision_backend=auto,\n",
+       "hub_model_id=None,\n",
+       "hub_private_repo=False,\n",
+       "hub_strategy=every_save,\n",
+       "hub_token=<HUB_TOKEN>,\n",
+       "ignore_data_skip=False,\n",
+       "include_inputs_for_metrics=False,\n",
+       "jit_mode_eval=False,\n",
+       "label_names=None,\n",
+       "label_smoothing_factor=0.0,\n",
+       "learning_rate=5e-05,\n",
+       "length_column_name=length,\n",
+       "load_best_model_at_end=False,\n",
+       "local_rank=-1,\n",
+       "log_level=passive,\n",
+       "log_level_replica=passive,\n",
+       "log_on_each_node=True,\n",
+       "logging_dir=results/runs/Dec10_21-35-41_datascience-1-0-ml-g4dn-2xlarge-8845c7cb0431b256ceb827a66e40,\n",
+       "logging_first_step=False,\n",
+       "logging_nan_inf_filter=True,\n",
+       "logging_steps=500,\n",
+       "logging_strategy=steps,\n",
+       "lr_scheduler_type=linear,\n",
+       "max_grad_norm=1.0,\n",
+       "max_steps=-1,\n",
+       "metric_for_best_model=None,\n",
+       "mp_parameters=,\n",
+       "no_cuda=False,\n",
+       "num_train_epochs=20,\n",
+       "optim=adamw_hf,\n",
+       "optim_args=None,\n",
+       "output_dir=results,\n",
+       "overwrite_output_dir=True,\n",
+       "past_index=-1,\n",
+       "per_device_eval_batch_size=8,\n",
+       "per_device_train_batch_size=8,\n",
+       "prediction_loss_only=False,\n",
+       "push_to_hub=False,\n",
+       "push_to_hub_model_id=None,\n",
+       "push_to_hub_organization=None,\n",
+       "push_to_hub_token=<PUSH_TO_HUB_TOKEN>,\n",
+       "ray_scope=last,\n",
+       "remove_unused_columns=True,\n",
+       "report_to=[],\n",
+       "resume_from_checkpoint=None,\n",
+       "run_name=results,\n",
+       "save_on_each_node=False,\n",
+       "save_steps=500,\n",
+       "save_strategy=steps,\n",
+       "save_total_limit=None,\n",
+       "seed=42,\n",
+       "sharded_ddp=[],\n",
+       "skip_memory_metrics=True,\n",
+       "tf32=None,\n",
+       "torchdynamo=None,\n",
+       "tpu_metrics_debug=False,\n",
+       "tpu_num_cores=None,\n",
+       "use_ipex=False,\n",
+       "use_legacy_prediction_loop=False,\n",
+       "use_mps_device=False,\n",
+       "warmup_ratio=0.0,\n",
+       "warmup_steps=0,\n",
+       "weight_decay=0.0,\n",
+       "xpu_backend=None,\n",
+       ")"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.load('results_report/training_args.bin')"
+   ]
   },
   {
    "cell_type": "code",
@@ -270,6 +255,7 @@
   }
  ],
  "metadata": {
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (Data Science)",
    "language": "python",
