--- a/dataset_construction.ipynb
+++ b/dataset_construction.ipynb
@@ -1658,7 +1658,9 @@
    "outputs": [],
    "source": [
     "df = pd.DataFrame(cleaned_lyrics)\n",
-    "df.rename(columns={0:'lyrics'},inplace=True)"
+    "df.rename(columns={0:'lyrics'},inplace=True)\n",
+    "\n",
+    "# df.to_parquet('beatles_lyrics.parquet')"
    ]
   },
   {
@@ -1778,13 +1780,39 @@
     "#     text_data.write(lyrics)\n",
     "# text_data.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = pd.read_parquet('beatles_lyrics.parquet').drop_duplicates('lyrics')\n",
+    "# df.drop(df[df['lyrics'].str.contains('Speech')].index, inplace=True)\n",
+    "# test_set = df.sample(34)\n",
+    "# train_set = df.drop(test_set.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test_set.to_parquet('testing_lyrics.parquet')\n",
+    "# train_set.to_parquet('training_lyrics.parquet')\n",
+    "# f = open('training_lyrics.txt', 'w')\n",
+    "# train_string = ' '.join(list(train_set.lyrics.values))\n",
+    "# f.write(train_string)"
+   ]
   }
  ],
  "metadata": {
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "python3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1796,7 +1824,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
