uploading training/test sets

--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dataset Construction\n",
+    "## Song Lyric Generation with GPT-2\n",
+    "**Data Mining Final Project**<br>\n",
+    "Khyatee Desai<br>Dec. 19, 2022"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
