--- a/dataset_construction.ipynb
+++ b/dataset_construction.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Dataset Construction\n",
     "This notebook retrieves all Beatles song lyrics from [azlyrics.com](www.azlyrics.com/b/beatles.html), cleans them, and stores them as training and test sets.\n",
-    "## Song Lyric Generation with GPT-2\n",
+    "### Song Lyric Generation with GPT-2\n",
     "**Data Mining Final Project**<br>\n",
     "Khyatee Desai<br>Dec. 19, 2022"
    ]
@@ -213,7 +213,7 @@
     "# save lyrics to a dataframe and parquet file\n",
     "df = pd.DataFrame(cleaned_lyrics)\n",
     "df.rename(columns={0:'lyrics'},inplace=True)\n",
-    "# df.to_parquet('beatles_lyrics.parquet')\n",
+    "# df.to_parquet('Data/beatles_lyrics.parquet')\n",
     "df"
    ]
   },
@@ -231,7 +231,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_parquet('beatles_lyrics.parquet').drop_duplicates('lyrics')\n",
+    "# drop duplicate lyrics and remove files tagged with [Speech], which are interviews\n",
+    "df = pd.read_parquet('Data/beatles_lyrics.parquet').drop_duplicates('lyrics')\n",
     "df.drop(df[df['lyrics'].str.contains('Speech')].index, inplace=True)\n",
     "test_set = df.sample(34)\n",
     "train_set = df.drop(test_set.index)"
@@ -243,9 +244,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test_set.to_parquet('testing_lyrics.parquet')\n",
-    "# train_set.to_parquet('training_lyrics.parquet')\n",
-    "f = open('training_lyrics.txt', 'w')\n",
+    "# save train/test sets as parquet and text file\n",
+    "\n",
+    "# test_set.to_parquet('Data/testing_lyrics.parquet')\n",
+    "# train_set.to_parquet('Data/training_lyrics.parquet')\n",
+    "f = open('Data/training_lyrics.txt', 'w')\n",
     "train_string = ' '.join(list(train_set.lyrics.values))\n",
     "# f.write(train_string)"
    ]
