--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -4,25 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dataset Construction\n",
-    "## Song Lyric Generation with GPT-2\n",
+    "# Model Fine-Tuning\n",
+    "This notebook fine-tunes the GPT-2 medium pretrained model on our training set\n",
+    "### Song Lyric Generation with GPT-2\n",
     "**Data Mining Final Project**<br>\n",
     "Khyatee Desai<br>Dec. 19, 2022"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install torch\n",
+    "# %pip install torch\n",
     "# !pip install transformers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,73 +42,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_dataset(file_path, tokenizer, block_size = 100):\n",
-    "    dataset = TextDataset(\n",
-    "        tokenizer = tokenizer,\n",
-    "        file_path = file_path,\n",
-    "        block_size = block_size,\n",
-    "    )\n",
-    "    return dataset\n",
-    "\n",
-    "\n",
-    "def load_data_collator(tokenizer, mlm = False):\n",
-    "    data_collator = DataCollatorForLanguageModeling(\n",
-    "        tokenizer = tokenizer, \n",
-    "        mlm = mlm,\n",
-    "    )\n",
-    "    return data_collator\n",
-    "\n",
-    "\n",
-    "def train(train_file_path,\n",
-    "          model_name,\n",
-    "          output_dir,\n",
-    "          overwrite_output_dir,\n",
-    "          per_device_train_batch_size,\n",
-    "          num_train_epochs,\n",
-    "          save_steps):\n",
-    "    \n",
+    "def train(train_filepath, output_dir, model_name, overwrite_output_dir, per_device_train_batch_size, num_train_epochs, save_steps):\n",
+    "    '''\n",
+    "    Encodes training data, batches training data, retrieves pretrained model, \n",
+    "    and fine-tunes the model on training data'''\n",
     "    tokenizer = GPT2Tokenizer.from_pretrained(model_name)\n",
-    "    train_dataset = load_dataset(train_file_path, tokenizer)\n",
-    "    data_collator = load_data_collator(tokenizer)\n",
+    "    train_dataset = TextDataset(tokenizer = tokenizer, filepath = filepath, block_size =100\n",
+    "    data_collator = DataCollatorForLanguageModeling(tokenizer = tokenizer, mlm = False)\n",
     "\n",
     "    tokenizer.save_pretrained(output_dir)\n",
     "      \n",
     "    model = GPT2LMHeadModel.from_pretrained(model_name)\n",
-    "\n",
     "    model.save_pretrained(output_dir)\n",
-    "    training_args = TrainingArguments(\n",
-    "          output_dir = output_dir,\n",
-    "          overwrite_output_dir = overwrite_output_dir,\n",
-    "          per_device_train_batch_size = per_device_train_batch_size,\n",
-    "          num_train_epochs=num_train_epochs\n",
-    "      )\n",
+    "                                \n",
+    "    train_args = TrainingArguments(output_dir = output_dir, \n",
+    "                                   overwrite_output_dir = overwrite_output_dir,\n",
+    "                                  per_device_train_batch_size = per_device_train_batch_size, \n",
+    "                                   num_train_epochs=num_train_epochs)\n",
     "\n",
-    "    trainer = Trainer(\n",
-    "          model = model,\n",
-    "          args = training_args,\n",
-    "          data_collator = data_collator,\n",
-    "          train_dataset = train_dataset,\n",
-    "  )\n",
+    "    trainer = Trainer(model = model,\n",
+    "                      args = train_args,\n",
+    "                      data_collator = data_collator,\n",
+    "                      train_dataset = train_dataset)\n",
     "      \n",
     "    trainer.train()\n",
     "    trainer.save_model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# training parameters\n",
-    "\n",
-    "train_file_path = \"training_lyrics.txt\"\n",
-    "model_name = 'gpt2-medium'\n",
-    "output_dir = 'results'\n",
-    "overwrite_output_dir = True\n",
-    "per_device_train_batch_size = 8\n",
-    "num_train_epochs = 20\n",
-    "save_steps = 500"
    ]
   },
   {
@@ -116,20 +75,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train(\n",
-    "    train_file_path= train_file_path,\n",
-    "    model_name= model_name,\n",
-    "    output_dir= output_dir,\n",
-    "    overwrite_output_dir= overwrite_output_dir,\n",
-    "    per_device_train_batch_size= per_device_train_batch_size,\n",
-    "    num_train_epochs= num_train_epochs,\n",
-    "    save_steps= save_steps\n",
-    ")"
+    "# start training\n",
+    "train(train_filepath = \"training_lyrics.txt\",\n",
+    "      output_dir = 'temp',\n",
+    "        model_name = 'gpt2-medium',\n",
+    "        overwrite_output_dir = True,\n",
+    "        per_device_train_batch_size= 8,\n",
+    "        num_train_epochs= 20,\n",
+    "        save_steps= 500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -240,13 +198,14 @@
        ")"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.load('results_report/training_args.bin')"
+    "# load and inspect trained model\n",
+    "torch.load('saved_model/training_args.bin')"
    ]
   },
   {
@@ -265,7 +224,7 @@
   }
  ],
  "metadata": {
-  "instance_type": "ml.t3.medium",
+  "instance_type": "ml.m5.large",
   "kernelspec": {
    "display_name": "Python 3 (Data Science)",
    "language": "python",
