--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -47,8 +47,8 @@
     "    Encodes training data, batches training data, retrieves pretrained model, \n",
     "    and fine-tunes the model on training data'''\n",
     "    tokenizer = GPT2Tokenizer.from_pretrained(model_name)\n",
-    "    train_dataset = TextDataset(tokenizer = tokenizer, filepath = filepath, block_size =100\n",
-    "    data_collator = DataCollatorForLanguageModeling(tokenizer = tokenizer, mlm = False)\n",
+    "    train_dataset = TextDataset(tokenizer = tokenizer, filepath = filepath, block_size =100) # encode training data\n",
+    "    data_collator = DataCollatorForLanguageModeling(tokenizer = tokenizer, mlm = False) #batch training data\n",
     "\n",
     "    tokenizer.save_pretrained(output_dir)\n",
     "      \n",
@@ -77,7 +77,7 @@
    "source": [
     "# start training\n",
     "train(train_filepath = \"training_lyrics.txt\",\n",
-    "      output_dir = 'temp',\n",
+    "      output_dir = 'saved_model',\n",
     "        model_name = 'gpt2-medium',\n",
     "        overwrite_output_dir = True,\n",
     "        per_device_train_batch_size= 8,\n",
@@ -209,11 +209,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finetuning code adapted from https://www.kaggle.com/code/changyeop/how-to-fine-tune-gpt-2-for-beginners"
+   ]
   },
   {
    "cell_type": "code",
